methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:1: error: not found: type boolean
def haveBaggle():Boolean = {var seenBaggle:boolean=false; for (stepper<-1 to 7) {if (isOverBaggle) {seenBaggle=true}; forward()} 
                                           ^MethodsReturning:1: error: type mismatch;
 found   : Unit
 required: Boolean
def haveBaggle():Boolean = {var seenBaggle:boolean=false; for (stepper<-1 to 7) {if (isOverBaggle) {seenBaggle=true}; forward()} 
                                                                      ^