methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {var seenBaggle:boolean=false; for (stepper<-1 to 7) {if (isOverBaggle) {seenBaggle=true}; forward()} 
}